--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,3 +5,7 @@ one:
   password_digest: MyString
   password_digest: <%= BCrypt::Password.create('g00d_pa$$') %>
 
+two:
+  email: ote@one.org
+  password_digest: MyString
+  password_digest: <%= BCrypt::Password.create('g00d_pa$$') %>
